# FastApiCleanArcTemplate

./: .dockerignore  .gitignore  Dockerfile  JenkinsFile  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 1dee6dc7a2a3_make_entities_auditable.py  405369e3cfac_initial_migration_create_products_table.py  c05bd4349445_add_user_table.py
src/: main.py
src/application/services/: product.py  user.py
src/core/: config.py  logger.py  logging.py
src/domain/: unit_of_work.py
src/domain/entities/: product.py  user.py
src/domain/repositories/: product.py  user.py
src/infrastructure/: unit_of_work.py
src/infrastructure/repositories/: product_repository.py  user_repository.py
src/infrastructure/schemas/: mixin.py  product_orm.py  user_orm.py
src/presentation/: dependencies.py
src/presentation/api/: products.py  users.py
tests/integratioin/: test_db.py  test_health.py
tests/unit/: test_domain_user.py  test_service_product.py
